--- a/packages/style/scss/form.scss
+++ b/packages/style/scss/form.scss
@@ -74,9 +74,10 @@
 }
 
 .facet-label,
-h3.facet-label {
+h3.facet-label,
+.query-rule-form-group label {
   font-size: $font-size-extrasmall;
-  font-weight: normal;
+  font-weight: 600;
   display: inline-block;
   line-height: 1.5;
   text-transform: uppercase;
@@ -262,4 +263,20 @@ h3.facet-label {
       font-size: 1.5rem;
     }
   }
+}
+
+.custom-select {
+  background: $white;
+  color: $mediumgrey-light;
+  font-size: $font-size-small;
+  height: 3rem;
+  border: 1px solid $middlegrey;
+  border-radius: 0.375rem;
+  // height: calc(1.5em + .75rem + 2px);
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  // font-weight: 400;
+  // line-height: 1.5;
+  // vertical-align: middle;
+  background: none;
 }
